[package]
name = "sol-shred-sdk"
version = "3.0.1"
edition = "2021"
authors = []
repository = "https://github.com/0xfnzero/sol-shred-sdk"
description = "Solana raw shred and ShredStream decoding SDK with multi-DEX event parsing."
license = "MIT"
keywords = ["solana", "shredstream", "shred", "dex", "parser"]
readme = "README.md"
autobins = false
exclude = [
    "jetstream_protos/**",
    "src/connector/**",
    "src/decoder/**",
    "src/main.rs",
    "filters.json",
    "src/filters.json",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["parse-borsh"]
parse-borsh = []
parse-zero-copy = []
perf-stats = []
ultra-perf = []

[dependencies]
# Solana dependencies
solana-sdk = "2.1.16"
solana-client = "2.1.16"
solana-program = "2.1.16" 
solana-rpc-client = "2.1.16"
solana-rpc-client-api = "2.1.16"
solana-transaction-status = "2.1.16"
solana-account-decoder = "2.1.16"
solana-hash = "2.1.16"
solana-security-txt = "1.1.1"
solana-entry = "2.1.16"
solana-ledger = "=2.2.20"
solana-system-interface = { version = "1.0.0", features = ["bincode"] }
solana-rpc-client-nonce-utils = "2.1.16"
solana-perf = "2.1.16"
lru = "0.16"
maplit = "1.0.2"
libc = "0.2"

# SPL dependencies
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "8.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = "6.0.0"
mpl-token-metadata = "5.1.0"

# Serialization and encoding
borsh = { version = "1.5.3", features = ["derive"] }
borsh-derive = "1.5.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.134"
bincode = "1.3.3"

# Async runtime and networking
tokio = { version = "1.42.0", features = ["full", "rt-multi-thread","sync"] }
futures = "0.3.31"
futures-util = "0.3.31"
crossbeam-queue = "0.3.12"
reqwest = { version = "0.12.12", features = ["json", "multipart"] }
isahc = "1.7.2"

# gRPC and WebSocket
yellowstone-grpc-client = { version = "6.0.0" }
yellowstone-grpc-proto = { version = "6.0.0" }
tonic = { version = "0.12.3", features = ["tls", "tls-roots", "tls-webpki-roots"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }

# TLS and security
rustls = { version = "0.23.23", features = ["ring"] }
rustls-native-certs = "0.8.1"
tokio-rustls = "0.26.1"

# Utilities
# 添加这两个缺失的依赖
tokio-stream = "0.1"
env_logger = "0.11"
base64 = "0.22.1"
base64-simd = "0.8"
bs58 = "0.5.1"
memchr = "2.7"
rand = "0.9.0"
anyhow = "1.0.90"
core_affinity = "0.8"
dotenvy = "0.15.7"
pretty_env_logger = "0.5.0"
log = "0.4.22"
chrono = "0.4.39"
regex = "1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
thiserror = "2.0.11"
async-trait = "0.1.86"
lazy_static = "1.5.0"
once_cell = "1.20.3"
dashmap = "6.0.1"
prost = "0.13.5"
prost-types = "0.13.5"
num_enum = "0.7.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
uint = "0.10.0"
clap = { version = "4.5.31", features = ["derive"] }
hex = "0.4.3"
bytemuck = { version = "1.4.0" }
socket2 = "0.5.10"
safe-transmute = "0.11.0"
enumflags2 = "0.6.4"
static_assertions = "1.1.0"
demand = "1.2.2"
arrayref = "0.3.6"
default-env = "0.1.1"
axum = { version = "0.8.1", features = ["macros"] }
indicatif = "0.17.11"
toml = "0.8.20"
parking_lot = "0.12.1"
rayon = "1.10"
serde-big-array = "0.5.1"
smallvec = "1.13"
wide = "0.7"

# Project specific
pumpfun = "4.2.0"




[build-dependencies]
protobuf-src = "1"
tonic-build = "0.10"
